--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "babel-preset-es2015": "^6.1.18"
   },
   "scripts": {
+    "build": "browserify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC"
