--- a/package.json
+++ b/package.json
@@ -7,17 +7,20 @@
   "dependencies": {
     "babel-preset-react": "^6.1.18",
     "babelify": "^7.2.0",
+    "browserify": "^12.0.1",
     "immutable": "^3.7.5",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
     "react-redux": "^4.0.0",
-    "redux": "^3.0.4"
+    "redux": "^3.0.4",
+    "watchify": "^3.6.1"
   },
   "devDependencies": {
     "babel-preset-es2015": "^6.1.18"
   },
   "scripts": {
-    "build": "browserify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
+    "build": "./node_modules/.bin/browserify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
+    "watch": "./node_modules/.bin/watchify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "license": "ISC"
