--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "babel-preset-es2015": "^6.1.18"
   },
   "scripts": {
-    "build": "./node_modules/.bin/browserify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
-    "watch": "./node_modules/.bin/watchify  reactSum.jsx -v -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "browserify reactSum.jsx -o reactSum.js -t [ babelify --presets [  react es2015 ] ]",
+    "watch": "watchify  reactSum.jsx -v -o reactSum.js -t [ babelify --presets [  react es2015 ] ]"
   },
   "license": "ISC"
 }
